--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./src/assets/airbnb-fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Airbnb | Clone</title>
+    <title>Airbnb | UI Clone</title>
   </head>
   <body>
     <div id="root"></div>
